# vae-lib

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
tests/: test_vae_lib.py
vae_lib/layers/: base.py  distribution.py  features_extraction.py  regression.py  sparsity.py  types.py
vae_lib/layers/distributions/: __init__.py  deep_gaussian_distribution.py  deep_sparse_gaussian_distribution.py  deep_spike_slab_distribution.py  flow.py  samplers.py  stochastic_process.py  types.py
vae_lib/layers/regressors/: __init__.py  deep_regressor.py  log_spike_regressor.py  types.py
vae_lib/models/: __init__.py  base_models.py  sparse_vae.py  sparse_vsc.py  stochastic_vae.py  types.py  vamp_prior_vae.py  variational_auto_encoder.py  variational_sparse_coding.py
vae_lib/utils/: callbacks.py  constraints.py  losses.py
