[tool.poetry]
name = "vae-lib"
version = "0.1.0"
description = ""
authors = ["Brendan L'OLLIVIER <blollivier@idmog.com>"]

[tool.poetry.dependencies]
python = ">=3.8.8,<3.11"
tensorflow = "^2.10.0"
tensorflow-probability = "0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
